# zkhack5-puzzle-zeitgeist

./: Cargo.toml  README.md
halo2/halo2_proofs/src/: arithmetic.rs  lib.rs  plonk.rs
halo2/halo2_proofs/src/plonk/: prover.rs  verifier.rs
poseidon-circuit/: Cargo.toml
poseidon-circuit/poseidon-circuit/src/: lib.rs
poseidon-circuit/poseidon-circuit/src/poseidon/: pow5.rs
src/: main.rs
